# archypix-app-back

./: .dockerignore  .env.example  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  compose.yaml  diesel.toml  flake.nix  roadmap.md  rocket.toml  shell.nix
migrations/0-setup/: down.sql  up-2.sql  up.sql
migrations/2025-05-13-192603_setup/: down.sql  up.sql
src/: main.rs
src/api/: picture.rs  query_pictures.rs  tags.rs
src/api/auth/: confirm.rs  signin.rs  signup.rs  status.rs
src/api/groups/: arrangement.rs  manual_groups.rs
src/database/: auth_token.rs  database.rs  duplicates.rs  group.rs  hierarchy.rs  picture.rs  schema.rs  user.rs  utils.rs
src/database/group/: arrangement.rs  group.rs  group_picture.rs  link_share_group.rs  shared_group.rs
src/database/hierarchy/: hierarchy.rs  hierarchy_arrangement.rs
src/database/picture/: duplicate.rs  duplicate_group.rs  picture.rs  picture_tag.rs  (+1 more)
src/ftp_server/: ftp.rs  ftp_backend.rs
src/grouping/: arrangement_strategy.rs  group_by_exif_interval.rs  group_by_exif_value.rs  group_by_filter.rs  group_by_location.rs  group_by_tag.rs  grouping_filter_strategy.rs  grouping_process.rs  grouping_strategy.rs  grouping_type.rs  strategy_filtering.rs  strategy_grouping.rs  topological_sorts.rs
src/mailing/: mailer.rs
src/picture_storer/: picture_file_storer.rs  picture_s3_storer.rs  picture_storer.rs
src/utils/: auth.rs  errors_catcher.rs  exif.rs  s3.rs  thumbnail.rs  utils.rs  validation.rs
static/templates/: base.html  confirm_signin.html  confirm_signup.html  text_confirm_signup.html
(+12 files in other folders)
