[package]
name = "archypix_app_back"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.84"
libunftp = "0.20.3"
rocket = { version = "0.5.1", features = ["json"] }
tracing-attributes = "0.1.28"
tokio = "1.37.0"
diesel_derives = "2.1.2"
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
rand = "0.8.5"
diesel-derive-enum = { version = "2.1.0", features = ["mysql"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
chrono-tz = { version = "0.10.0", default-features = false, features = ["serde"] }
bigdecimal = "0.4.7"
serde = { version = "1.0.217", features = ["derive"] }
validator = { version = "0.19.0", features = ["derive"] }
hex = "0.4.3"
pwhash = "1"
user-agent-parser = { version = "0.3.6", features = ["rocket"] }
enum-kinds = "0.5.1"
diesel = { version = "2.2.6", features = ["mysql_backend", "mysql", "r2d2", "chrono"] }
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
rocket_cors = "0.6.0"
tera = "1.19.1"
lazy_static = "1.4.0"
totp-rs = { version = "5.6.0", features = ["qr", "otpauth"] }
rocket_okapi = { version = "0.9.0", features = ["swagger", "rapidoc"] }
schemars = "0.8.21"
strum = "0.26.3"
strum_macros = "0.26.4"
rexiv2 = "0.10.0"